2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/command.h (GRUB_COMMAND_FLAG_CMDLINE): Removed. All
	users updated.
	(GRUB_COMMAND_FLAG_MENU): Likewise.
	(GRUB_COMMAND_FLAG_BOTH): Likewise.
	(GRUB_COMMAND_FLAG_TITLE): Removed.
	(GRUB_COMMAND_FLAG_NO_ECHO): Likewise.
	(GRUB_COMMAND_FLAG_EXTCMD): Moved into enum.
	(GRUB_COMMAND_FLAG_DYNCMD): Likewise.
	(GRUB_COMMAND_FLAG_BLOCKS): Likewise.
	(grub_command_flags_t): New enum. All users updated.

2010-09-14  Seth Goldberg <seth.goldberg@oracle.com>

	Fix solaris compilation.

	* grub-core/Makefile.core.def (kernel): Include gnulib/error.c on emu.
	(grub-emu): Add LIBZFS and LIBNVPAIR to ldadd.
	(grub-emu-list): Likewise.

2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove deprecated root command.

	* grub-core/commands/minicmd.c (grub_mini_cmd_root): Removed. All users
	updated.

2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/i386/pc/grub-setup.c: Merge this ...
	* util/sparc64/ieee1275/grub-setup.c:  ... and this ...
	* util/grub-setup.c: ... into this.
	* include/grub/sparc64/ieee1275/boot.h (grub_boot_blocklist) [ASM_FILE]:
	New struct.

2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ext2.c (grub_ext2_open): Use return error value when
	possible.

2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/partmap/sun.c (sun_partition_map_iterate): Don't needlesly
	allocate p.

2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkconfig_lib.in (prepare_grub_to_access_device): Add
	explicit root argument to set to prevent UUID to be interpreted as
	argument to set.

2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/sparc64/ieee1275/crt0.S: Align stack.

2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Don't export grub_gate_a20.

	* grub-core/kern/i386/pc/init.c: Remove leftovers.
	* grub-core/kern/i386/pc/startup.S (FUNCTION(grub_gate_a20)): Rename
	to ...